istio-alertmanager-virtualservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: alertmanager-virtualservice
  namespace: istio-system
spec:
  hosts:
    - alertmanager.127.0.0.1.nip.io
  gateways:
    - istio-config-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kube-prometheus-stack-alertmanager
            port:
              number: 9093
