istio-grafana-virtualservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: grafana-virtualservice
  namespace: istio-system
spec:
  hosts:
    - grafana.127.0.0.1.nip.io
  gateways:
    - istio-config-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kube-prometheus-stack-grafana
            port:
              number: 80
