istio-kiali-virtualservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: kiali-virtualservice
  namespace: istio-system
spec:
  hosts:
    - kiali.127.0.0.1.nip.io
  gateways:
    - istio-config-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kiali
            port:
              number: 20001
