istio-kubernetes-dashboard-virtualservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: kubernetes-dashboard-virtualservice
  namespace: kube-system
spec:
  hosts:
    - kubernetes-dashboard.127.0.0.1.nip.io
  gateways:
    - istio-system/istio-config-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kubernetes-dashboard
            port:
              number: 443
---
# The DestinationRule allows the kubernetes dashboard to be reachable on the 443 via http:
# http://kubernetes-dashboard.127.0.0.1.nip.io:443/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-kubernetes-dashboard
  namespace: kube-system
spec:
  host: kubernetes-dashboard
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: SIMPLE
