istio-nginx-1-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: nginx-test
  name: nginx-1
spec:
  gateways:
  - istio-system/istio-config-gateway
  # - mesh
  hosts:
  - "*"
  # - nginx-1.nginx-test.svc.cluster.local
  # - nginx-1.127.0.0.1.nip.io
  # - nginx.mattiaperi.kinder
  http:
    - name: 'nginx-1'
      match:
        - uri:
            prefix: /
      route:
      - destination:
          host: nginx-1.nginx-test.svc.cluster.local
